# cpp_structure_from_motion

./: .gitignore  CMakeLists.txt  main.cpp
cmake_fetch_funcs/: FetchCeres.cmake
include/testing_out_stuff/: ceres_playgroung.hpp  sophus_tings.hpp
include/utils/: data_loader.hpp  pprint_utils.hpp  trajectory_utils.hpp
include/visual_odometry/: visual_odometry_intro.hpp
resources/image_data/einstein_1_stereo_dataset/: calibration2.txt  extrinsics_1_2.txt
